@@ -1,3 +1,7 @@
+2010-05-19  Glenn Morris  <rgm@gnu.org>
+
+	* s/aix4-2.h (LINKER): Remove; this file sets ORDINARY_LINK.
+
 2010-05-18  Chong Yidong  <cyd@stupidchicken.com>
 
 	* character.c (Fstring, Funibyte_string): Use SAFE_ALLOCA to
